--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -10,7 +10,7 @@ jobs:
         uses: xu-cheng/latex-action@v2
         with:
           root_file: lettera_candidatura.tex
-          working_directory: lettera_candidatura
+          working_directory: "./src/lettera_candidatura/"
           work_in_root_file_dir: true
           post_compile: "latexmk -c"
           
