--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -3,6 +3,10 @@ on: [push]
 jobs:
   build_latex:
     runs-on: ubuntu-latest
+    
+    env:
+      GITHUB_TOKEN: $
+      
     steps:
       - name: Set up Git repository
         uses: actions/checkout@v3
