--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -17,7 +17,7 @@ jobs:
             shopt -s globstar
             set -e
             for d_path in ./**/*.tex; do (
-              if($d_path != "glossario")
+              if($d_path != "glossario" && $d_path != "template")
               then
                 cd "$(dirname $d_path)"
                 latexmk $(basename $d_path)
