cambiato path repo (?)

--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -25,10 +25,10 @@ jobs:
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: documenti compilati automaticamente
-          repository: '/home/runner/work/latex-action/latex-action'
+          repository: $GITHUB_WORKSPACE
           branch: out_docs
-          status_options: '--untracked-files=all'
-          file_pattern: './.*.pdf'
+          status_options: --untracked-files=all
+          file_pattern: ./.*.pdf
        
        
       # upload pdf compilato 
