--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -23,9 +23,7 @@ jobs:
             
       - uses: actions/checkout@v3
       - run: |
-          git config user.name github-actions
-          git config user.email github-actions@github.com
-          git add .
+          git add ./**/d_*.pdf
           git commit -m "pdf autogenerati"
           git push       
        
