--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -23,12 +23,12 @@ jobs:
             
       - uses: actions/checkout@v3
       - run: |
-          git add ./**/d_*.pdf
+          git add "./**/d_*.pdf"
           git commit -m "pdf autogenerati"
           git push       
        
       #- name: upload pdf compilato 
       #- uses: actions/upload-artifact@v3
       #  with:
-      #    name: lettera_candidatura
-      #    path: "./src/lettera_candidatura/*.pdf"
+      #    name: docs_compilati
+      #    path: "/**/*.pdf"
