--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -20,16 +20,13 @@ jobs:
               cd "$(dirname $d_path)"
               latexmk -pdflatex $(basename $d_path)
             )
-            
             for d_path in ./**/glossario.tex; do (
               cd "$(dirname $d_path)"
               latexmk -pdflatex $(basename $d_path)
               makeglossaries $(basename $d_path)
               latexmk -pdflatex $(basename $d_path)
               latexmk -pdflatex $(basename $d_path)
-            )
-            
-            done'
+            ) done'
             
       - name: upload pdf compilato 
       - uses: actions/upload-artifact@v3
