--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -23,7 +23,9 @@ jobs:
           shopt -s globstar
           set -e
           mkdir out_docs
-          mv **/*.pdf out_docs
+          mv **/*d_.pdf out_docs
+          git config --global user.name github-actions
+          git config --global user.email github-actions@github.com
           git add out_docs
           git commit -m "pdf compilati"
           git remote add origin https://github.com/MGufo/latex-docs-action.git
