test popolamento cartella

--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -24,6 +24,11 @@ jobs:
           set -e
           mkdir out_docs
           mv **/d_*.pdf out_docs
+
+          for file in out_docs do
+            echo "${file##*/}"
+          done
+
           git config --global user.name github-actions
           git config --global user.email github-actions@github.com
           git remote add origin https://github.com/MGufo/latex-docs-action.git
