--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -23,16 +23,11 @@ jobs:
           shopt -s globstar
           set -e
           mkdir out_docs
-          mv **/d_*.pdf out_docs
-
-          for file in out_docs
-          do
-            echo "$file"
-          done
+          mv ./**/d_*.pdf out_docs
 
           git config --global user.name github-actions
           git config --global user.email github-actions@github.com
-          git remote add origin https://github.com/MGufo/latex-docs-action.git
+          git pull https://github.com/MGufo/latex-docs-action.git
           git add /out_docs/*
           git commit -m "pdf compilati"
           git push -u origin master
