--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -27,7 +27,6 @@ jobs:
 
           git config --global user.name github-actions
           git config --global user.email github-actions@github.com
-          git pull https://github.com/MGufo/latex-docs-action.git
           git add /out_docs/*
           git commit -m "pdf compilati"
-          git push -u origin master
+          git push -u https://github.com/MGufo/latex-docs-action.git master
