--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -23,10 +23,9 @@ jobs:
           shopt -s globstar
           set -e
           cd ..
-          mkdir docs
-          cd docs
           git clone https://github.com/MGufo/latex-docs-action.git
-          mv ../**/d_*.pdf ./
+          mv ../**/d_*.pdf ./latex-docs-action
+          cd latex-docs-action
           git add .
           git commit -m "pdf compilati"
           git push -u origin 
