--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -5,12 +5,19 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Set up Git repository
+      - name: Clone source repo
         uses: actions/checkout@v3
+        with:
+          path: src
+      - name: Clone destination repo
+        uses: actions/checkout@v3
+        with:
+          path: dst
+          repository: MGufo/latex-docs-action
 
       - name: Compile LaTeX document
         run: |
-          docker run -i --rm -v "$(pwd)/:/work" -w /work ghcr.io/xu-cheng/texlive-full bash -c '
+          docker run -i --rm -v "$(pwd)/src:/work" -w /work ghcr.io/xu-cheng/texlive-full bash -c '
             shopt -s globstar
             set -e
             for d_path in ./**/d_*.tex; do (
@@ -22,12 +29,8 @@ jobs:
         run: |
           shopt -s globstar
           set -e
-          cd ..
-          git clone https://github.com/MGufo/latex-docs-action.git
-          mv ../**/d_*.pdf ./latex-docs-action
-          cd latex-docs-action
-          git config user.name github-actions
-          git config user.email github-actions@github.com
+          mv src/**/*.pdf dst
+          cd dst
           git add .
-          git commit -m "pdf compilati"
-          git push -u origin 
+          git commit -m "upload pdf"
+          git push -u origin
