--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -31,8 +31,8 @@ jobs:
           set -e
           mv src/**/*.pdf dst
           cd dst
-          git add .
           git config user.name github-actions
           git config user.email github-actions@github.com
+          git add .
           git commit -m "upload pdf"
-          git push -u origin
+          git push -u
