--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -26,6 +26,8 @@ jobs:
             ) done'
 
       - name: upload pdf
+        env:
+          secret: ${{secrets.ACTION_TOKEN}}
         run: |
           shopt -s globstar
           set -e
