--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -14,6 +14,7 @@ jobs:
         with:
           path: dst
           repository: MGufo/latex-docs-action
+          token: ${{ secrets.ACTION_TOKEN }}
 
       - name: Compile LaTeX document
         run: |
@@ -26,8 +27,6 @@ jobs:
             ) done'
 
       - name: upload pdf
-        env:
-          secret: ${{ secrets.ACTION_TOKEN }}
         run: |
           shopt -s globstar
           set -e
