--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           path: dst
           repository: MGufo/latex-docs-action
-          token: ${{ secrets.ACTION_TOKEN }}
+          token: ${{ secrets.ACTION }}
 
       - name: Compile LaTeX document
         run: |
